UPLOAD content index

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="izquierda">
         <span id="img">
-            <img src="https://static.vecteezy.com/system/resources/previews/012/591/917/large_2x/programmer-icon-illustration-vector.jpg" alt="imagen">
+            <img src="./assets/programer.jpg" alt="programer.jpg">
         </span>
     </div>
 
@@ -17,13 +17,13 @@
         <span id="quien_soy">
             <p>¿Quién soy?</p>
             <div id="menu-desplegable">
-                Soy un programador junior enfocado en el desarollo de paguinas web.
+                Soy un programador junior especializado en el desarrollo de páginas web.
             </div>
         </span>
         <span id="experiencia">
-            <p>Experiencia</p>
+            <span>Experiencia</span>
             <ol>
-                <li>Sena - tecnologo. </li>
+                <li>Sena - tecnologo: ADSO </li>
                 <li>Grupo ASD</li>
             </ol>
         </span>
