UPDATE: funcionamiento y ortografia

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <span><a href="http://127.0.0.1:5500/DB/mySQL.sql">MySQL</a></span>
                 <span><a href="http://127.0.0.1:5500/DB/mongoDB.json">MongoDB</a></span>
                 <span><a href="http://127.0.0.1:5500/html_css/ciudad.html">HTML/CSS</a></span>
-                <span><a href="http://localhost:8100/home">Angular</a></span>
+                <span><a href="http://localhost:8100/home">Ionic - Angular</a></span>
                 <span>React</span>
             </div>
         </span>
