CREATE: React proyect

--- a/typeScript/typescript.html
+++ b/typeScript/typescript.html
@@ -5,6 +5,7 @@
     <meta name="viewport"">
     <title>Controlador pequeño</title>
     <link rel="stylesheet" href="./typescript.css">
+    <link rel="icon" type="image/png" href="../assets/typescript_logo.png" />
 </head>
 <body>
     
