--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </ol>
         </span>
         <span id="idiomas">
-            <p>Idiomas</p>
+            <p>Lenguajes de Programación</p>
             <div>
                 <span><a href="http://127.0.0.1:5000/getUsers">JavaScript</a></span>
                 <span><a href="http://127.0.0.1:5500/typescript/typescript.html">TypeScript</a></span>
